fixing alignment of icon for tickets.

--- a/src/components/Layout/NavItem/NavItem.module.css
+++ b/src/components/Layout/NavItem/NavItem.module.css
@@ -1,4 +1,7 @@
 .link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #ebebeb;
   font-size: 1rem;
   text-decoration: none;
